crates/toml/tests/snapshots/invalid/ext/table/value.stderr
TOML parse error at line 1, column 3
  |
1 | ''
  |   ^
key with no value, expected `=`
